--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas>=1.0.5
-dask>=2.19.0
-numpy>=1.18.5
-
-matplotlib>=3.2.2
-scikit-learn>=0.23.1
-keras>=2.4.3
+argparse>=1.4.0
+pandas>=1.1.0
+matplotlib>=3.3.0
+sklearn>=0.0
+scikit-learn>=0.23.2
+Keras>=2.4.3
